--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -39,7 +39,7 @@
           <a
             href="{% url 'core:login' %}"
             class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700"
-            >Login in</a
+            >Login</a
           >
         {% endif %}
       </div>
