--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -50,8 +50,10 @@
       <div class="w-2/3 pr-10">
         <h3 class="mb-5 font-semibold text-gray-400">About</h3>
         <p class="text-lg text-gray-500">
-          Connect with Electronics Suppliers Make Enquiry & Get Quotes Now!
+          Explore a world of products with our international marketplace. Shop with ease and enjoy seamless global delivery, bringing you the best from around the globe to your doorstep!
         </p>
+        <br/>
+        <p class="text-lg text-gray-500">© 2024 @matsika. All rights reserved</p>
       </div>
       <div class="w-1/3">
         <h3 class="mb-5 font-semibold text-gray-400">Menu</h3>
