--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -12,7 +12,7 @@
     <nav
       class="py-6 px-6 flex justify-between items-center border-b border-gray-200"
     >
-      <a href="/" class="text-xl font-semibold">Peace Online</a>
+      <a href="/" class="text-xl font-semibold">Buyer's Haven</a>
       <div class="space-x-6">
         <a href="{% url 'item:new' %}" class="text-lg font-semibold hover:text-gray-500"
           >New Item</a
