--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -15,7 +15,7 @@
       <a href="/" class="text-xl font-semibold">Buyer's Haven</a>
       <div class="space-x-6">
         <a href="{% url 'item:new' %}" class="text-lg font-semibold hover:text-gray-500"
-          >New Item</a
+          >Sell Item</a
         >
         <a href="{% url 'item:items' %}" class="text-lg font-semibold hover:text-gray-500">Browse</a>
         
