--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Buyer's Haven</title>
+    <title>Bulk Buyer's Haven</title>
   </head>
   <body>
     <nav
       class="py-6 px-6 flex justify-between items-center border-b border-gray-200"
     >
-      <a href="/" class="text-xl font-semibold">Buyer's Haven</a>
+      <a href="/" class="text-xl font-semibold">Bulk Buyer's Haven</a>
       <div class="space-x-6">
         <a href="{% url 'item:new' %}" class="text-lg font-semibold hover:text-gray-500"
           >Sell Item</a
