--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -9,7 +9,7 @@
     <title>Bulk Buyer's Haven</title>
     <link
       rel="icon"
-      href="{% static 'images/homepage.png' %}"
+      href="{% static 'media/item_images/homepage.png' %}"
       type="image/x-icon"
     />
   </head>
