--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -7,6 +7,7 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Bulk Buyer's Haven</title>
+    {% load static %}
     <link
       rel="icon"
       href="{% static 'images/homepage.png' %}"
